--- a/src/main/java/pl/tomaszdziurko/jvm_bloggers/view/front_end/common_layout/RightFrontendSidebar.html
+++ b/src/main/java/pl/tomaszdziurko/jvm_bloggers/view/front_end/common_layout/RightFrontendSidebar.html
@@ -23,7 +23,7 @@
                 <article class="box-lg blog-post blog-post-variant">
                    Jeśli chcesz pokodować w projekcie z mikroserwisami, Javą 8, Scalą, Springiem, Akką i co tam sobie
                     jeszcze wymyślimy, zapraszamy na naszego <a href="https://github.com/tdziurko/jvm-bloggers" target="_blank">GitHuba</a>
-                    lub <a href="https://gitter.im/tdziurko/jvm-bloggers" target="_blank">Gittera</a> :)
+                    lub <a href="https://jvm-bloggers-slack.herokuapp.com/" target="_blank">Slacka</a> :)
                 </article>
             </div>
 
